app/styles/emuwebapp.scss
@import 'EMUwebAppDesign';
@import 'font';
@import 'mixins';

/**
    ###################################
        emuwebapp directive css
    ###################################
*/

.emuwebapp * {
    text-rendering: optimizeLegibility;
    //margin: 0;
    //padding: 0;
    @extend .emuwebapp-font-small;
    @include vendor-prefix(user-select, "none");
    @include vendor-prefix(touch-callout, "none");
}

.emuwebapp {
    left: 0px;
    top: 0px;
    width: 100%;
    min-width: 100%;
    height: 100%;
    min-height: 100%;
    position: absolute;
    background-color: $color-white;
    text-align: center;
    overflow:hidden;
    @include vendor-prefix(user-select, "none");
    @include vendor-prefix(touch-callout, "none");
    @extend .emuwebapp-font-small;
    > .emuwebapp-main {
      flex: 1;
      display: flex;
      position: absolute;
      width: 100%;
      height: 100%;
      > .emuwebapp-window {
        flex: 1;
		    display: flex;
		    flex-direction: column;
        > .emuwebapp-top-menu {
          height:40px;
          background: $color-blue;
          @include vendor-prefix(touch-callout, none);
          text-align:left;
          z-index: 5;
        }
        > .emuwebapp-bottom-menu {
          width:100%;
          height:87px;
          background: $color-blue;
          @include vendor-prefix(touch-callout, none);
          text-align:left;
          padding-left:5px;
          padding-bottom:5px;
          z-index: 5;
        }
		    > .emuwebapp-canvas {
          flex: 1;
          position:relative;
          z-index:1;
          @include vendor-prefix(user-select, none);
        }
      }
    }
    .left {
        float: left;
        margin-right: 6px;
        margin-top: 4px;
    }
    .full {
        width: 100%;
    }
    table {
      border-collapse: collapse;
    }
    ul {
        margin: 0;
        padding: 0;
        width: 100%;
        list-style-type: none;
    }
    li {
        margin: 0;
        padding: 0;
        width: 100%;
    }
    button {
        border-spacing: 0;
        @extend .emuwebapp-font-small;
        line-height: 1.1em;
        list-style: none outside none;
        margin: 0;
        padding: 0;
        text-align: center;
        text-decoration: none;
        text-indent: 0;
        cursor: pointer;
    }
    .emuwebapp-dropdown-container {
      z-index: 99999 !important;
    }
    .emuwebapp-dropdown-container:hover #demoDB {
        background-color: $color-white;
        color: $color-black;
    }
    #emuwebapp-dropdown-arrow:after {
        content: '\25B8';
    }
    .emuwebapp-dropdown-container:hover #emuwebapp-dropdown-arrow:after {
        content: '\25BE';
    }
    .emuwebapp-dropdown-menu {
        background: $color-white;
        list-style: none outside none;
        margin: 0;
        margin-left: -1px;
        padding: 0;
        border-spacing: 0;
        border-left: 1px solid $color-blue;
        border-right: 1px solid $color-blue;
        border-bottom: 1px solid $color-blue;
        li {
            @extend .emuwebapp-font-small;
            padding: 5px;
            margin: 0px;
            max-width: 90px;
        }

        li:hover {
            color: $color-blue;
            cursor: pointer;
        }
    }
}

